# otmeshing

./: CMakeLists.txt  README.rst
.ci_support/: run_docker_linux.sh  run_docker_mindeps.sh
.github/workflows/: build.yml
cmake/: Findcddlib.cmake  otmeshingConfig.cmake.in
distro/debian/: changelog  control  rules
distro/rpm/: otmeshing.spec
distro/windows/: README.txt  installer.nsi
lib/: CMakeLists.txt
lib/include/: CMakeLists.txt
lib/include/otmeshing/: otmeshing.hxx  otmeshingprivate.hxx
lib/src/: CMakeLists.txt  CloudMesher.cxx  ConvexDecompositionMesher.cxx  ConvexHullMesher.cxx  ConvexIntersectionMesher.cxx  Cylinder.cxx  FunctionGraphMesher.cxx  IntersectionMesher.cxx  MeshDomain2.cxx  PolygonMesher.cxx  UnionMesher.cxx
lib/src/otmeshing/: CloudMesher.hxx  ConvexDecompositionMesher.hxx  ConvexHullMesher.hxx  ConvexIntersectionMesher.hxx  Cylinder.hxx  FunctionGraphMesher.hxx  IntersectionMesher.hxx  MeshDomain2.hxx  PolygonMesher.hxx  UnionMesher.hxx
lib/test/: CMakeLists.txt  t_CloudMesher_std.cxx
python/doc/: conf.py.in  index.rst
python/doc/examples/: plot_cloud.py  plot_convex_hull.py  plot_cylinder.py  plot_decomposition.py  plot_example1.py  plot_example2.py  plot_meshdomain2.py  plot_polygon.py  plot_union.py
python/doc/pyplots/: CloudMesher.py  ConvexDecompositionMesher.py  ConvexHullMesher.py  ConvexIntersectionMesher.py  Cylinder.py  FunctionGraphMesher.py  IntersectionMesher.py  MeshDomain2.py  UnionMesher.py  (+1 more)
python/src/: CMakeLists.txt  CloudMesher.i  CloudMesher_doc.i  ConvexDecompositionMesher.i  ConvexDecompositionMesher_doc.i  ConvexHullMesher.i  ConvexHullMesher_doc.i  ConvexIntersectionMesher.i  ConvexIntersectionMesher_doc.i  Cylinder.i  Cylinder_doc.i  FunctionGraphMesher.i  FunctionGraphMesher_doc.i  IntersectionMesher.i  IntersectionMesher_doc.i  METADATA.in  MeshDomain2.i  MeshDomain2_doc.i  PolygonMesher.i  PolygonMesher_doc.i  UnionMesher.i  UnionMesher_doc.i  __init__.py  otmeshing_module.i
python/test/: CMakeLists.txt  t_CloudMesher_std.py  t_ConvexDecompositionMesher_std.py  t_ConvexHullMesher_std.py  t_ConvexIntersectionMesher_std.py  t_Cylinder_std.py  t_FunctionGraphMesher_std.py  t_IntersectionMesher_std.py  t_MeshDomain2_std.py  t_PolygonMesher_std.py  t_UnionMesher_std.py  t_docstring.py
utils/: build_locally.sh
validation/src/: ValidConvexIntersectionMesher.py
(+3 files in other folders)
